<resources>
    <string name="app_name">FlatFlatChing</string>
    <string name="ok">Okay</string>
    <string name="action_settings">Settings</string>
    <string name="expensesTitle">Ausgaben</string>
    <string name="shoppingListsTitle">Shopping Lists</string>
    <string name="title_activity_expenses">ExpensesActivity</string>
    <string name="title_activity_shopping_list">ShoppingListActivity</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="nameTitle">Name</string>
    <string name="passwordTitle">Password</string>
    <string name="LoginTitle">Login</string>
    <string name="FlatIdTitle">Flat ID</string>
    <string name="server_error">Entschuldige, da ist was schiefgegangen</string>
    <string name="login_text">Anscheinend benutzt du die App zum ersten Mal. Logge dich einfach über deinen Google Account ein</string>
    <string name="open_own_flat">WG noch nicht erfasst?</string>
    <string name="email_title">Email</string>
    <string name="title_activity_create_flat">CreateFlatActivity</string>
    <string name="flat_name_question">Wie soll deine WG heissen?</string>
    <string name="connection_error">Du scheinst keine Internetverbindung zu haben</string>
    <string name="internal_error">Hoppla, da ist was schief gegangen</string>
    <string name="wgTitle">WG</string>
    <string name="recordNewFlatTitle">Alternativ kannst du hier noch eure Adresse für Rechnungen hinterlegen</string>
    <string name="streetTitle">Strasse</string>
    <string name="streetNumberTitle">Nr</string>
    <string name="cityTitle">Ort</string>
    <string name="postCodeTitle">Plz</string>
    <string name="recordNewFlatTitleButton">WG erstellen</string>
    <string name="title_activity_manage_flat_mates">ManageFlatMatesActivity</string>
    <string name="newFlatMateTitle">Neuer Mitbewohner?</string>
    <string name="NewFlatMateTask">Lade ihn doch über seinen Googleaccount ein</string>
    <string name="inviteTitle">Einladen</string>
    <string name="flatMateTitle">Mitbewohner</string>
    <string name="create_flat_title">WG erfassen</string>
    <string name="without_flat_action_description">Erfasse deine eigene WG oder lasse dich von deinen Freunden einladen</string>
    <string name="titleDescription">Bezeichnung</string>
    <string name="titleAmount">Betrag</string>
    <string name="titleDueDate">Fälligkeit</string>
    <string name="titleContributors">Mitzahlende</string>
    <string name="staticExpenseTitle">Periodische Ausgabe</string>
    <string name="titlePeriod">Intervall</string>
    <string name="createTitle">Erfassen</string>
    <string name="newExpenseTitle">Neue Ausgabe</string>
    <string name="error_no_name">Gib der WG einen Namen</string>
    <string name="alert_flat_created">WG wurde erstellt</string>
    <string name="error_invalid_email">Ungültige Emailadresse</string>
    <string name="contributes_title">Beteiligt</string>
    <string name="contributorsTitle">Beteiligte</string>
    <string name="expense_created_message">Ausgabe erfasst</string>
    <string name="no_expenses_message">Du hast anscheinend alle Ausgaben getätigt! Oder noch nicht alle erfasst?</string>
    <string name="no_flatmates">Du hast leider noch keine Mitbewohner</string>
    <string name="invitation_sent">Einladung verschickt</string>
    <string name="cancel">Abbrechen</string>
    <string name="delete_user_confirmation">Bist du sicher, dass du diesen Mitbewohner löschen willst?</string>
    <string name="flatName">FlatFlatChing</string>
    <string name="leaveWgTitle">WG verlassen</string>
    <string-array name="interval_array">
        <item>Täglich</item>
        <item>Wöchentlich</item>
        <item>Alle 2 Wochen</item>
        <item>Monatlich</item>
        <item>Jährlich</item>
    </string-array>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="leaveFlat">Du willst deine WG verlassen?</string>
    <string name="exitButtonTxt">Austreten</string>
    <string name="confirmExitString">Willst du wirklich aus der WG austreten?</string>
    <string name="exit_flat_confirmation">Du bist ausgetreten</string>
    <string name="home">Home</string>
    <string name="deletet_flatmate">Mitbewohner entfernt</string>
    <string name="all_ressources_needed">Alle Angaben sind zwingend</string>

</resources>
