<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.flatflatching.flatflatching.activities.ManageFlatMatesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="184dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/newFlatMateTitle"
            android:id="@+id/textView2"/>

        <TextView
            android:layout_marginTop="@dimen/space_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/NewFlatMateTask"
            android:id="@+id/textView3"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/space_down"
            android:layout_height="0dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editText2"
            android:hint="@string/email_title"
            android:layout_weight="0.80" />

        <Button
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/space_down"
            android:layout_height="wrap_content"
            android:text="@string/inviteTitle"
            android:id="@+id/button"
            android:background="@color/green"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"/>
    </LinearLayout>


</RelativeLayout>
