<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Flat">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.flatflatching.flatflatching.activities.NewExpenseActivity"
    style="@style/background"
    android:id="@+id/newExpenseBackgroundContainer">
    <include
        layout="@layout/tool_bar"
        />

    <TextView
        style="@style/messageShower"
        android:id="@+id/messageShower"/>
    <RelativeLayout
        style="@style/backgroundPane"
        android:fitsSystemWindows="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/space_down"
            android:weightSum="1"
            android:id="@+id/linearLayout3">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextDescription"
                android:hint="@string/titleDescription"
                android:singleLine="true"
                android:imeOptions="actionDone"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/editTextAmount"
                android:hint="@string/titleAmount"
                android:singleLine="true"
                android:imeOptions="actionDone"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextDueDate"
                android:singleLine="true"
                android:hint="@string/titleDueDate"
                android:imeOptions="actionDone"/>

        </LinearLayout>

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBarCreateExpense"
            android:visibility="gone"
            android:layout_below="@+id/linearLayout3"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contributorsTitle"
            android:textSize="18sp"
            android:layout_below="@+id/linearLayout3"
            android:layout_alignParentEnd="true"
            android:id="@+id/textViewContributors"
            android:layout_marginBottom="@dimen/space_down"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/cardListContributors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewContributors"
                android:layout_above="@+id/checkBoxStaticExpense"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewContributors"
            android:layout_above="@+id/checkBoxStaticExpense"
            android:id="@+id/no_flat_mates_view"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/no_flatmates"
                android:id="@+id/textView2"
                android:textColor="#555"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:src="@drawable/flatmates"

                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_above="@+id/textView2" />
        </RelativeLayout>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/staticExpenseTitle"
            android:id="@+id/checkBoxStaticExpense"
            android:button="@null"
            android:gravity="end|center_vertical"
            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
            android:visibility="visible"
            android:layout_above="@+id/flatAdminExpenseArea"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/flatAdminExpenseArea"
            android:visibility="invisible"
            android:layout_above="@+id/buttonCreateExpense"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="@dimen/space_down">
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/spinnerPeriod"
                android:gravity="end|center_vertical"
                android:visibility="visible" />

        </LinearLayout>

        <Button
            style="@style/actionButton"
            android:text="@string/createTitle"
            android:id="@+id/buttonCreateExpense"
            android:layout_gravity="bottom"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />





    </RelativeLayout>

</LinearLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer_menu"
        />
</android.support.v4.widget.DrawerLayout>