<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/background"
    tools:context=".Flat"
    android:id="@+id/baseContainer">
    <include
        layout="@layout/tool_bar"
        />
<LinearLayout
    style="@style/backgroundPane"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/messageShower"
        android:visibility="gone"
        android:textSize="@dimen/button_text_size"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:weightSum="1">
        <com.flatflatching.flatflatching.CustomLayouts.SquareLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:id="@+id/layoutExpenseButton"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/expensesTitle"
                android:id="@+id/expensesButton"
                android:background="@drawable/fancybutton_green"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text_size"/>
        </com.flatflatching.flatflatching.CustomLayouts.SquareLayout>
        <com.flatflatching.flatflatching.CustomLayouts.SquareLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:id="@+id/layoutShoppingListButton"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/shoppingListsTitle"
                android:id="@+id/shoppingListButton"
                android:background="@drawable/fancybutton_red"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text_size"/>
        </com.flatflatching.flatflatching.CustomLayouts.SquareLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:weightSum="1">
        <com.flatflatching.flatflatching.CustomLayouts.SquareLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:id="@+id/layoutFlatMatesButton"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/flatMateTitle"
                android:id="@+id/flatMatesButton"
                android:background="@drawable/fancybutton_blue"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text_size"/>
        </com.flatflatching.flatflatching.CustomLayouts.SquareLayout>
        <com.flatflatching.flatflatching.CustomLayouts.SquareLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:id="@+id/layoutCreateFlatButton"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/create_flat_title"
                android:id="@+id/createFlatButton"
                android:background="@drawable/fancybutton_brown"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text_size"/>
        </com.flatflatching.flatflatching.CustomLayouts.SquareLayout>
    </LinearLayout>

</LinearLayout>

</LinearLayout>
